--- a/index.css
+++ b/index.css
@@ -1,9 +1,3 @@
-body{
-  background-color: black;
-  color: #aaaaaa;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 #aria2-version, span.speed, span.gid, span.complete-percentage, 
   span.download-status{
   margin-right: 3em;
@@ -13,18 +7,26 @@ form.command-panel, div.command-panel{
   margin: 0.3em 0em;
 }
 
-#add-by-url-panel, #add-by-torrent-panel, #statistics-panel{
+#add-by-url-panel, #add-by-torrent-panel{
   display: none;
 }
 
-input[type='text'], input[type='number'], input[type='password']{
+#settings-panel input{
+  display: block;
+  margin-bottom: 0.3em;
+}
+
+input[type='text'], input[type='password']{
   font-family: Arial, Helvetica, sans-serif;
-  width: 10em;
+}
+
+#new-download-url{
+  width: 20em;
 }
 
 #error-message{
   color: #ff4136;
-  /* display: none; */
+  display: none;
   margin: 0.3em 0em;
 }
 
@@ -32,7 +34,7 @@ span.gid{
   font-family: monospace;
 }
 
-section.download-details{
+div.download-details{
   display: none;
 }
 
