Updated dependency and minor page layout.

--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#statistics{
+  margin-bottom: 0.3em;
+}
+
 div.header-text{
   font-size: larger;
   font-weight: bold;
